--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
         </h1>
     </header>
     <hr>
+    <form>
+        <p>Formulário de Cadastro</p>
+        <label for="nome">Nome:</label>
+        <input type="text" name="nome">
+        <label for="cpf">CPF:</label>
+        <input type="text" name="cpf">
+        <label for="celular">Celular:</label>
+        <input type="text" name="celular">
+        <label for="senha">Senha:</label>
+        <input type="password" name="senha">
+        <label for="senha_conf">Confirme a senha:</label>
+        <input type="password" name="senha_conf">
+        <div id="botoes_form">
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </div>
+    </form>
     <footer>
         <h3>
             Mais informações da DEVinBank:
@@ -40,7 +57,7 @@
                 </p>
                 <ul>
                     <li>
-                        Linkedin: <a href="index.html">linkedin.com/DEVinBank</a> 
+                        Linkedin: <a href="index.html">linkedin.com/DEVinBank</a>
                     </li>
                     <li>
                         Facebook: <a href="index.html">facebook.com/DEVinBank</a>
