--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
 
@@ -18,18 +18,18 @@
         </h1>
     </header>
     <hr>
-    <form>
+    <form id="formulario">
         <p>Formulário de Cadastro</p>
         <label for="nome">Nome:</label>
-        <input type="text" name="nome">
+        <input type="text" name="nome" id="nome" placeholder="João da Silva">
         <label for="cpf">CPF:</label>
-        <input type="text" name="cpf">
+        <input type="text" name="cpf" id="cpf" placeholder="999.999.999.99">
         <label for="celular">Celular:</label>
-        <input type="text" name="celular">
+        <input type="text" name="celular" id="celular" placeholder="(99) 99999-9999">
         <label for="senha">Senha:</label>
-        <input type="password" name="senha">
+        <input type="password" name="senha" id="senha">
         <label for="senha_conf">Confirme a senha:</label>
-        <input type="password" name="senha_conf">
+        <input type="password" name="senha_conf" id="senha_conf">
         <div id="botoes_form">
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
